--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "dependencies": {
-    "@tailwindcss/postcss": "^4.0.0",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.1"
-  },
-  "devDependencies": {
-    "tailwindcss": "^4.0.0"
-  }
+	"dependencies": {
+		"@tailwindcss/cli": "^4.0.3",
+		"@tailwindcss/postcss": "^4.0.0",
+		"autoprefixer": "^10.4.20",
+		"postcss": "^8.5.1"
+	},
+	"scripts": {
+		"dev": "npx @tailwindcss/cli -i ./src/css/main.css -o ./public/build/tailwind.css --watch"
+	},
+	"devDependencies": {
+		"tailwindcss": "^4.0.3"
+	}
 }
